--- a/blue_scale/pubspec.yaml
+++ b/blue_scale/pubspec.yaml
@@ -41,6 +41,9 @@ dev_dependencies:
   get_it: ^6.0.0
   image_picker: ^0.7.2
   http: ^0.13.1
+  flutter_google_places:
+  flutter_map: ^0.12.0
+  google_maps_flutter:
 
 
 # For information on the generic Dart part of this file, see the
