--- a/blue_scale/pubspec.yaml
+++ b/blue_scale/pubspec.yaml
@@ -44,6 +44,8 @@ dev_dependencies:
   flutter_google_places:
   flutter_map: ^0.12.0
   google_maps_flutter:
+  sklite: ^0.0.1
+  flutter_sparkline: "^0.1.0"
 
 
 # For information on the generic Dart part of this file, see the
