--- a/blue_scale/pubspec.yaml
+++ b/blue_scale/pubspec.yaml
@@ -40,6 +40,8 @@ dev_dependencies:
   provider: ^5.0.0
   get_it: ^6.0.0
   image_picker: ^0.7.2
+  excel: ^1.1.5
+  path_provider: ^2.0.1
 
 
 # For information on the generic Dart part of this file, see the
