--- a/blue_scale/pubspec.yaml
+++ b/blue_scale/pubspec.yaml
@@ -46,6 +46,8 @@ dev_dependencies:
   google_maps_flutter:
   sklite: ^0.0.1
   flutter_sparkline: "^0.1.0"
+  autocomplete_textfield: ^1.7.3
+  flutter_typeahead: ^3.1.1
 
 
 # For information on the generic Dart part of this file, see the
