--- a/blue_scale/pubspec.yaml
+++ b/blue_scale/pubspec.yaml
@@ -32,17 +32,17 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  firebase_core: ^1.0.0
-  firebase_database: ^6.1.0
-  firebase_auth: ^1.0.0
+  firebase_core: ^0.7.0
+  firebase_database: ^6.0.0
+  firebase_auth: ^0.20.1 
   fluttertoast: ^7.1.8
-  cloud_firestore: ^1.0.0
+  cloud_firestore: ^0.16.0+1
   provider: ^5.0.0
   get_it: ^6.0.0
-  image_picker: ^0.7.2
+  #image_picker: ^0.7.2
   excel: ^1.1.5
   path_provider: ^2.0.1
-
+  requests: ^3.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/datasheet.xlsx
 
 
 
