--- a/blue_scale/pubspec.yaml
+++ b/blue_scale/pubspec.yaml
@@ -32,13 +32,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  firebase_core: ^0.7.0
-  firebase_database: ^6.0.0
-  firebase_auth: ^0.20.1 
-  cloud_firestore: ^0.16.0+1
+  firebase_core: ^1.0.0
+  firebase_database: ^6.1.0
+  firebase_auth: ^1.0.0
+  fluttertoast: ^7.1.8
+  cloud_firestore: ^1.0.0
   provider: ^5.0.0
   get_it: ^6.0.0
- # image_picker: ^0.7.2
+  image_picker: ^0.7.2
   http: ^0.13.1
   flutter_google_places:
   flutter_map: ^0.12.0
@@ -48,11 +49,6 @@ dev_dependencies:
   autocomplete_textfield: ^1.7.3
   flutter_typeahead: ^3.1.1
 
-  #image_picker: ^0.7.2
-  excel: ^1.1.5
-  path_provider: ^2.0.1
-  requests: ^3.2.0
-  fluttertoast: ^7.1.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,8 +64,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/datasheet.xlsx
-
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
