--- a/blue_scale/pubspec.yaml
+++ b/blue_scale/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  integration_test:
+    sdk: flutter
+  flutter_test:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,14 +43,14 @@ dev_dependencies:
   provider: ^5.0.0
   get_it: ^6.0.0
  # image_picker: ^0.7.2
-  http: ^0.13.1
+ # http: ^0.13.1
   flutter_google_places:
   flutter_map: ^0.12.0
   google_maps_flutter:
   sklite: ^0.0.1
   flutter_sparkline: "^0.1.0"
   autocomplete_textfield: ^1.7.3
-  flutter_typeahead: ^3.1.1
+  flutter_typeahead: ^2.0.0
 
   #image_picker: ^0.7.2
   excel: ^1.1.5
